# yoshiko-flow

./: .gitignore  AGENTS.md  CHANGE-VALIDATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  DRIFT-CHECK.md  GUARDRAILS.md  README.md  SPEC.md  install.py  install.sh  manifest
.claude/: .gitignore
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
AGENTS/: DOCUMENTATION.md
_shared/: README.md  active_set.py  json_extract.py  renderable_fences.py  sync.py  test_sync.py
docs/: MIGRATION.md  recommended-settings.md
docs/diagrams/: drift-check-artifact-graph.d2  skill-ecosystem.d2
docs/plans/plan-002-james-dixson-b8b610/: README.md  context.md  plan.md
docs/plans/plan-003-james-dixson-adacc7/: README.md  context.md  plan.md
docs/plans/plan-005-james-dixson-44b200/: plan.md
docs/plans/plan-006-james-dixson-bf6e21/: README.md  context.md  plan.md
docs/plans/plan-007-james-dixson-84da0d/: README.md  context.md  plan.md
docs/plans/plan-008-james-dixson-382e8a/: README.md  context.md  plan.md  upstream-triage.md
docs/plans/plan-009-james-dixson-996e44/: README.md  context.md  plan.md
docs/plans/plan-010-james-dixson-73eebd/: README.md  context.md  plan.md
docs/plans/plan-011-james-dixson-dd21e3/: README.md  context.md  plan.md
docs/plans/plan-012-james-dixson-a99822/: README.md  context.md  plan.html  plan.md  upstream-triage.md
docs/plans/plan-013-james-dixson-0af2f8/: README.md  context.md  plan.md  upstream-triage.md
docs/plans/plan-014-james-dixson-916de2/: README.md  context.md  plan.md  upstream-triage.md
docs/plans/plan-015-james-dixson-cb2ef4/: README.md  context.md  plan.md  upstream-triage.md
docs/plans/plan-016-james-dixson-041b2f/: README.md  context.md  plan.md  upstream-triage.md
docs/plans/plan-017-james-dixson-9ac898/: README.md  context.md  plan.md  upstream-triage.md
docs/plans/plan-018-james-dixson-1d39eb/: README.md  context.md  plan.md
docs/yf/: preflight-contract.md
skills/: SPEC-TEMPLATE.md
skills/bdplan/: README.md  SKILL.md  SPEC.md
skills/bdplan/agents/: captor.md  coordinator.md  investigator.md  planner.md  red-team.md
skills/bdplan/formulas/: plan-execute.formula.toml
skills/bdplan/scripts/: plan_manager.py  test_worktree.py
skills/bdplan/spec/: agents.md  cli.md  data.md  phases.md  portability.md  worktree-execute-lifecycle.d2
skills/bdresearch/: README.md  SKILL.md  SPEC.md
skills/bdresearch/agents/: coordinator.md  packager.md  red-team.md  retriever.md  toolsmith.md  triangulator.md
skills/bdresearch/protocols/: RESEARCH.md  manifest.json
skills/bdresearch/scripts/: research_manager.py
skills/bdresearch/spec/: agents.md  cli.md  data.md  epistemics.md  phases.md  portability.md  prerequisites.md
skills/beads-authoring/: README.md  SKILL.md  SPEC.md
skills/beads-authoring/agents/: reviewer.md
skills/beads-authoring/spec/: orchestration.md  structure.md
skills/beads-extra/: README.md  SKILL.md
skills/beads-extra/spec/: cli.md  json-and-scope.md
skills/beads-upstream/: SKILL.md
skills/beads-upstream/protocols/: UPSTREAM_TRACKING.md
skills/beads-upstream/scripts/: upstream.py
skills/beads-upstream/spec/: operations.md  safety.md
skills/diagram-authoring/: SKILL.md
skills/incubator/: README.md  SKILL.md  SPEC.md
skills/markdown-lint/: README.md  SKILL.md
skills/markdown-lint/protocols/: MARKDOWN_LINT.md
skills/markdown-pdf/: README.md  SKILL.md
skills/markdown-pdf/scripts/: md2pdf.py
skills/optimal-instructions/: README.md  SKILL.md  SPEC.md
skills/optimal-instructions/agents/: instruction-optimizer.md
skills/optimal-instructions/protocols/: INSTRUCTIONS.md
skills/optimal-instructions/spec/: apply.md  integration.md  structure.md
skills/skill-authoring/: README.md  SKILL.md  SPEC.md
skills/skill-authoring/agents/: optimizer.md  red-team.md  reviewer.md
skills/skill-authoring/reference/: AGENT_ROLES.md  PORTABILITY.md  SURFACE_CONVENTION.md
skills/yf-beads-authoring/: README.md  SKILL.md  SPEC.md
skills/yf-beads-authoring/spec/: formulas.md  orchestration.md  structure.md
skills/yf-beads-extra/: README.md  SKILL.md  SPEC.md
skills/yf-beads-extra/spec/: cli.md  json-and-scope.md
skills/yf-beads-hygiene/: README.md  SKILL.md  SPEC.md
skills/yf-beads-hygiene/scripts/: beads_hygiene.py  test_beads_hygiene.py
skills/yf-beads-init/: README.md  SKILL.md  SPEC.md
skills/yf-beads-init/protocols/: BEADS_INIT.md  manifest.json
skills/yf-beads-init/scripts/: beads_init.py
skills/yf-beads-upstream/: README.md  SKILL.md  SPEC.md
skills/yf-beads-upstream/protocols/: UPSTREAM_TRACKING.md  manifest.json
skills/yf-beads-upstream/scripts/: manifest_update.py  test_upstream.py  upstream.py
skills/yf-beads-upstream/spec/: backends.md  operations.md
skills/yf-change-validation/: README.md  SKILL.md  SPEC.md
skills/yf-diagram-authoring/: README.md  SKILL.md  SPEC.md
skills/yf-drift-check/: README.md  SKILL.md  SPEC.md
skills/yf-incubator/: SKILL.md  SPEC.md
skills/yf-markdown-lint/: README.md  SKILL.md  SPEC.md
skills/yf-markdown-pdf/: README.md  SKILL.md  SPEC.md
skills/yf-optimal-instructions/: SKILL.md  SPEC.md
skills/yf-plan/: README.md  SKILL.md  SPEC.md
skills/yf-research/: README.md  SKILL.md  SPEC.md
skills/yf-skill-authoring/: README.md  SKILL.md  SPEC.md
website/: docusaurus.config.js  package-lock.json
website/docs/: commands.md  install.md  intro.md  migration.md  preflight.md  skills.md
website/static/: CNAME
yf/: Cargo.toml  build.rs
yf/src/: beads_init.rs  cli.rs  coverage.rs  dest.rs  dirs.rs  embed.rs  flow.rs  frontmatter.rs  main.rs  marker.rs  marker_tests.rs  migrate.rs  parity.rs  preflight.rs  tool.rs
yf/src/cmd/: common.rs  doctor.rs  install.rs  mod.rs  status.rs
yf/src/cmd/doctor/: check.rs  checks.rs  mod.rs
yf/src/cmd/self_cmd/: archive.rs  fsutil.rs  install.rs  mod.rs  nag.rs  receipt.rs  source.rs  uninstall.rs  update.rs
yf/src/testdata/: gen-install-parity.py  install-parity.json
yf/src/testdata/flow/: BEADS_INIT.v1.0.0.md
yf/tests/: flow_install_e2e.rs
(+159 files in other folders)
