[workspace]
members = ["yf"]
resolver = "2"

# The profile cargo-dist builds release artifacts with (`cargo build --profile dist`).
# Required by the cargo-dist CI build job; `dist init` normally adds this, so it must
# be present whenever `[workspace.metadata.dist]` is configured.
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist (the `dist` tool) release configuration — REQ-YF-DIST-001.
#
# Hand-authored per cargo-dist's documented `[workspace.metadata.dist]` schema:
# `dist`/`cargo-dist` is NOT installed on this machine, so `dist init` could not
# be run interactively. Once cargo-dist is installed (at gate G3), regenerate the
# workflow with `dist init` / `dist generate` to pick up the canonical generated
# `.github/workflows/release.yml` and to confirm/adjust this block.
#
# Version source of truth: the `yf` crate version in `yf/Cargo.toml`. Releases are
# cut by pushing a `v<semver>` git tag (e.g. `v0.1.0`); cargo-dist derives the
# release semver from that tag. The crate version and the tag must agree.
#
# Bead 4.2 finalizes the Homebrew side (REQ-YF-DIST-002/003): the `dixson3/homebrew-tap`
# tap target and the `homebrew` publish job. The formula declares NO runtime
# `depends_on` lines — `beads` (`bd`) and `uv` are intentionally NOT Homebrew
# dependencies of `yf` (they are provisioned out-of-band, e.g. vendor installers /
# the dotfiles bootstrap), so the `[workspace.metadata.dist.dependencies.homebrew]`
# block is deliberately omitted.
[workspace.metadata.dist]
# Pinned to match the `dist` installed at G3 prep (user-scope ~/.cargo/bin/dist).
cargo-dist-version = "0.32.0"
# CI backend that runs the release.
ci = "github"
# Installers cargo-dist generates. `shell` = curl|sh installer; `homebrew` emits a
# formula published to the tap below (bead 4.2).
installers = ["shell", "homebrew"]
# Homebrew tap target — the GitHub repo cargo-dist pushes the generated formula to.
tap = "dixson3/homebrew-tap"
# Publish jobs cargo-dist wires into the release pipeline. `homebrew` is the built-in
# job that pushes the formula to `tap` using the HOMEBREW_TAP_TOKEN secret (REQ-YF-DIST-002).
publish-jobs = ["homebrew"]
# The 4-way release matrix: {darwin, linux} × {amd64, arm64}.
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
# sha256 checksums for every artifact.
checksum = "sha256"
# Publish a GitHub Release with the artifacts attached.
pr-run-mode = "plan"
# Vendor-install layout (plan-018 Issue 1.2). The generated curl|sh installer writes
# the binary to ~/.local/bin (XDG-aligned, decision 3) instead of the cargo-dist default
# ~/.cargo/bin, and emits its receipt at ~/.config/yf/yf-receipt.json. The vendor prefix
# `yf self update` keys on (3.1/3.3) is the canonicalized install_prefix from that receipt.
install-path = "~/.local/bin"
# Flip the unix archive from the default .tar.xz to .tar.gz (plan-018 Issue 1.2) so the
# `yf self update` consumer (3.4a) extracts with pure-Rust flate2+tar — no C xz codec and
# no GNU-tar-needs-xz-userland failure on minimal Linux/Alpine/container hosts.
unix-archive = ".tar.gz"

# NOTE: no `[workspace.metadata.dist.dependencies.homebrew]` block.
# `yf` intentionally declares NO Homebrew runtime dependencies. Although yf
# shells out to `bd` (beads) and `uv` at runtime, these are provisioned
# out-of-band (vendor curl installers / the dotfiles bootstrap), NOT pulled in
# as `depends_on` lines in the generated formula. Re-adding a `stage = ["run"]`
# dependency here would reintroduce `depends_on "beads"` / `depends_on "uv"`.
