[package]
name = "yf"
version = "0.1.0"
edition = "2021"
description = "Yoshiko Flow CLI: install, upgrade, verify, and preflight portable agent skills."
license = "MIT"
authors = ["James Dixson <dixson3@gmail.com>"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
