[package]
name = "yf"
version = "0.3.2"
edition = "2021"
description = "Yoshiko Flow CLI: install, upgrade, verify, and preflight portable agent skills."
license = "MIT"
authors = ["James Dixson <dixson3@gmail.com>"]
repository = "https://github.com/dixson3/yoshiko-flow"
homepage = "https://github.com/dixson3/yoshiko-flow"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# Pure-Rust .tar.gz extraction for `yf self update` (plan-018 3.4a). flate2's
# default `miniz_oxide` backend is pure Rust — no C zlib, and no system tar/xz
# (the GNU-tar-needs-xz landmine the .tar.gz flip in 1.2 avoids).
flate2 = "1"
rust-embed = { version = "8", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tar = "0.4"
# Minimal synchronous HTTP for `yf self update` (plan-018 3.4). ureq + rustls — no
# async runtime (decision 6: NOT reqwest/tokio), keeping the binary small (GR-011).
ureq = { version = "2", features = ["tls"], default-features = false }
# Atomic in-place replacement of the running binary (3.4).
self-replace = "1"

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
